add delete user function
